// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bezwaren thema pagina > Matches the Full Page snapshot when API gives no result 1`] = `
<DocumentFragment>
  <div
    class="ams-grid redacted"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_4650bd"
    >
      <div
        class="_PageHeadingInner_4650bd"
        id="skip-to-id-AppContent"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/bezwaren"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Bezwaren
                </span>
              </a>
            </li>
          </ol>
        </nav>
        <h1
          class="ams-heading ams-heading--1 _PageHeading_4650bd"
        >
          Bezwaren
        </h1>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-8-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <p
        class="ams-paragraph"
      >
        U ziet hier alle bezwaren die zijn ingediend via ons 
        <a
          class="ams-link"
          href="https://formulieren.amsterdam.nl/TriplEforms/DirectRegelen/formulier/nl-NL/evAmsterdam/BezwaarEnBeroep.aspx"
          rel="noopener noreferrer"
        >
          bezwaarformulier.
        </a>
         
      </p>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <ul
        class="ams-link-list"
      >
        <li>
          <a
            class="ams-link-list__link"
            href="https://www.amsterdam.nl/veelgevraagd/bezwaar-maken-tegen-een-besluit-van-de-gemeente-amsterdam-e5898"
            rel="noreferrer"
          >
            <span
              class="ams-icon"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M7.911 2.5 17.5 12l-9.589 9.5L6.5 20.102 14.677 12 6.5 3.898z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            Meer informatie over Bezwaar maken
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <section
        class="ams-alert ams-alert--error"
      >
        <div
          class="ams-alert__severity-indicator"
        >
          <span
            class="ams-icon ams-icon--inverse ams-icon--heading-4"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="m22.879 12-5.44 9.422-10.877-.001L1.122 12 6.56 2.58h10.878zM12 10.586 8.856 7.442 7.442 8.856 10.586 12l-3.144 3.145 1.414 1.414L12 13.414l3.145 3.145 1.414-1.415L13.414 12l3.145-3.145-1.415-1.413z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="ams-alert__content"
        >
          <div
            class="ams-row ams-row--align-between ams-row--align-vertical-start"
          >
            <h4
              class="ams-heading ams-heading--4"
            >
              Foutmelding
            </h4>
          </div>
          <p
            class="ams-paragraph"
          >
            We kunnen op dit moment niet alle gegevens tonen.
          </p>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Bezwaren thema pagina > Matches the Full Page snapshot when there are no requests 1`] = `
<DocumentFragment>
  <div
    class="ams-grid redacted"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_4650bd"
    >
      <div
        class="_PageHeadingInner_4650bd"
        id="skip-to-id-AppContent"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/bezwaren"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Bezwaren
                </span>
              </a>
            </li>
          </ol>
        </nav>
        <h1
          class="ams-heading ams-heading--1 _PageHeading_4650bd"
        >
          Bezwaren
        </h1>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-8-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <p
        class="ams-paragraph"
      >
        U ziet hier alle bezwaren die zijn ingediend via ons 
        <a
          class="ams-link"
          href="https://formulieren.amsterdam.nl/TriplEforms/DirectRegelen/formulier/nl-NL/evAmsterdam/BezwaarEnBeroep.aspx"
          rel="noopener noreferrer"
        >
          bezwaarformulier.
        </a>
         
      </p>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <ul
        class="ams-link-list"
      >
        <li>
          <a
            class="ams-link-list__link"
            href="https://www.amsterdam.nl/veelgevraagd/bezwaar-maken-tegen-een-besluit-van-de-gemeente-amsterdam-e5898"
            rel="noreferrer"
          >
            <span
              class="ams-icon"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M7.911 2.5 17.5 12l-9.589 9.5L6.5 20.102 14.677 12 6.5 3.898z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            Meer informatie over Bezwaar maken
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <h3
        class="ams-heading ams-heading--2"
      >
        Lopende bezwaren
      </h3>
      <div
        class="ams-table"
      >
        <table
          class="ams-table__table _TableV2_1fc147"
        >
          <tbody
            class="ams-table__body"
          />
        </table>
      </div>
      <p
        class="ams-paragraph"
      >
        U heeft geen lopende zaken. Het kan zijn dat een ingediend bezwaar nog niet is geregistreerd.
      </p>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <h3
        class="ams-heading ams-heading--2"
      >
        Afgehandelde bezwaren
      </h3>
      <div
        class="ams-table"
      >
        <table
          class="ams-table__table _TableV2_1fc147"
        >
          <tbody
            class="ams-table__body"
          />
        </table>
      </div>
      <p
        class="ams-paragraph"
      >
        U heeft nog geen afgehandelde bezwaren.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Bezwaren thema pagina > Matches the Full Page snapshot when there are requests 1`] = `
<DocumentFragment>
  <div
    class="ams-grid redacted"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_4650bd"
    >
      <div
        class="_PageHeadingInner_4650bd"
        id="skip-to-id-AppContent"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/bezwaren"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Bezwaren
                </span>
              </a>
            </li>
          </ol>
        </nav>
        <h1
          class="ams-heading ams-heading--1 _PageHeading_4650bd"
        >
          Bezwaren
        </h1>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-8-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <p
        class="ams-paragraph"
      >
        U ziet hier alle bezwaren die zijn ingediend via ons 
        <a
          class="ams-link"
          href="https://formulieren.amsterdam.nl/TriplEforms/DirectRegelen/formulier/nl-NL/evAmsterdam/BezwaarEnBeroep.aspx"
          rel="noopener noreferrer"
        >
          bezwaarformulier.
        </a>
         
      </p>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <ul
        class="ams-link-list"
      >
        <li>
          <a
            class="ams-link-list__link"
            href="https://www.amsterdam.nl/veelgevraagd/bezwaar-maken-tegen-een-besluit-van-de-gemeente-amsterdam-e5898"
            rel="noreferrer"
          >
            <span
              class="ams-icon"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M7.911 2.5 17.5 12l-9.589 9.5L6.5 20.102 14.677 12 6.5 3.898z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            Meer informatie over Bezwaar maken
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <h3
        class="ams-heading ams-heading--2"
      >
        Lopende bezwaren
      </h3>
      <div
        class="ams-table"
      >
        <table
          class="ams-table__table _TableV2_1fc147"
        >
          <thead
            class="ams-table__header"
          >
            <tr
              class="ams-table__row"
            >
              <th
                class="ams-table__header-cell"
                style="width: 25%;"
              >
                Zaaknummer
              </th>
              <th
                class="ams-table__header-cell"
                style="width: 25%;"
              >
                Ontvangen op
              </th>
              <th
                class="ams-table__header-cell"
                style="width: 50%;"
              >
                Onderwerp
              </th>
            </tr>
          </thead>
          <tbody
            class="ams-table__body"
          >
            <tr
              class="ams-table__row"
            >
              <td
                class="ams-table__cell"
              >
                <a
                  class="ams-link _MaLink_10c0a4 _MaRouterLink__no-underline-fat_10c0a4"
                  href="/bezwaren/68cdd171-b4fd-44cc-a4d3-06b77341f20a"
                  title="Bekijk meer over BI.21.014121.001"
                >
                  BI.21.014121.001
                </a>
              </td>
              <td
                class="ams-table__cell"
              />
              <td
                class="ams-table__cell"
              >
                Korte omschrijving van het bezwaar
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <h3
        class="ams-heading ams-heading--2"
      >
        Afgehandelde bezwaren
      </h3>
      <div
        class="ams-table"
      >
        <table
          class="ams-table__table _TableV2_1fc147"
        >
          <tbody
            class="ams-table__body"
          />
        </table>
      </div>
      <p
        class="ams-paragraph"
      >
        U heeft nog geen afgehandelde bezwaren.
      </p>
    </div>
  </div>
</DocumentFragment>
`;
